@@ -753,9 +753,6 @@ ifneq (,$(offload_targets))
   ifneq (,$(filter $(gcn_target_name), $(offload_targets)))
 	offload_opt += $(gcn_target_name)=$(CURDIR)/$(d)-gcn/$(PF)
   endif
-  ifneq (,$(filter hsa, $(offload_targets)))
-	offload_opt += hsa
-  endif
   CONFARGS += \
 	--enable-offload-targets=$(subst $(SPACE),$(COMMA),$(strip $(offload_opt)))
   ifeq ($(with_offload_nvptx),yes)
@@ -2149,10 +2146,6 @@ endif
 
 ifeq ($(with_offload_gcn),yes)
   include debian/rules.d/binary-gcn.mk
-endif
-
-ifeq ($(with_offload_hsa),yes)
-  include debian/rules.d/binary-hsa.mk
 endif
 
 ifeq ($(with_libnof),yes)
