@@ -8,6 +8,7 @@ gcc-11 (11-20201117-1) UNRELEASED; urgency=medium
   * Build the gcn offload compiler using LLVM 11, and work around the
     broken as in LLVM 11. See also LLVM Bug 48201 for this issue and
     https://reviews.llvm.org/D73999 for the patch causing the issue.
+  * Remove hsa offload packaging bits.
 
  -- Matthias Klose <doko@debian.org>  Tue, 17 Nov 2020 20:54:42 +0100
 
